# playing-with-lsystems

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: abop-page-27-inspired.lsys  leaf-polygon.lsys  plant.lsys  stochastic-branch.lsys
scripts/: build.sh  run.sh
src/: lsystem.cpp  lsystem.h  main.cpp  turtle.cpp  turtle.h
